// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article active rendering should render active correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  Object {
                    "backgroundColor": "#037DE2",
                  },
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#fff",
                      "fontSize": 11,
                    },
                    Object {
                      "marginLeft": 2,
                    },
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-play"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                Object {
                  "backgroundColor": "#037DE2",
                  "color": "#ffffff",
                },
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article downloaded rendering should render downloaded correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#03A87C",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  null,
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 11,
                    },
                    Object {
                      "marginLeft": 2,
                    },
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-play"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article full rendering should render full correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          >
            Test title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                Jordy on Test
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  null,
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 11,
                    },
                    Object {
                      "marginLeft": 2,
                    },
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-play"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="Article-duration"
        >
          2 min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article incompatibility warning render should render correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  null,
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 11,
                    },
                    Object {
                      "marginLeft": 2,
                    },
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-play"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 6,
          "marginTop": 12,
        }
      }
      testID="Article-Button-incompatibility-warning"
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffc107",
            "borderRadius": 6,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-Regular",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-Regular",
                },
                undefined,
              ]
            }
          >
            This article
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-Bold",
                },
                Object {},
              ]
            }
          >
             
            might
             
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-Regular",
                },
                undefined,
              ]
            }
          >
            not be compatible for listening.
             
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-Regular",
                },
                Object {
                  "marginTop": 4,
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                },
              ]
            }
          >
            Learn more
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article loading rendering should render loading correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  null,
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <ActivityIndicator
                animating={true}
                color="#000"
                hidesWhenStopped={true}
                size="small"
                testID="Article-PlayIcon-ActivityIndicator"
              />
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article minimal rendering should render minimal correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  null,
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 11,
                    },
                    Object {
                      "marginLeft": 2,
                    },
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-play"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article playing rendering should render playing correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      null,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 12,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="Article-Button-section"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexBasis": "auto",
              "flexGrow": 0,
              "marginBottom": 10,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={3}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 17,
                  "lineHeight": 23,
                },
                Array [
                  Object {
                    "color": "#000000",
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ],
              ]
            }
            testID="Article-title"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexGrow": 0,
                "flexShrink": 1,
              },
              Object {
                "flexDirection": undefined,
                "writingDirection": "ltr",
              },
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#C5C5C5",
                    "fontSize": 14,
                  },
                  Object {
                    "marginRight": 6,
                  },
                  Object {
                    "fontFamily": "Feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="Article-icon-downloaded"
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": "auto",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  Object {
                    "flexDirection": undefined,
                    "writingDirection": "ltr",
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 13,
                      "lineHeight": 16,
                    },
                    Array [
                      Object {
                        "color": "#AAAAAA",
                        "paddingRight": 0,
                      },
                      Object {
                        "direction": "ltr",
                        "writingDirection": "ltr",
                      },
                    ],
                  ]
                }
                testID="Article-source-name"
              >
                www.google.nl
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "marginLeft": 20,
            "marginTop": 4,
            "width": 75,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#C5C5C5",
              "borderRadius": 6,
              "height": 75,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "width": 75,
            }
          }
          testID="Article-Button-play"
        >
          <View
            style={
              Object {
                "height": 32,
                "position": "absolute",
                "width": 32,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 32,
                    "elevation": 1,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "#000000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 1,
                    "width": 32,
                  },
                  Object {
                    "backgroundColor": "#037DE2",
                  },
                ]
              }
              testID="Article-PlayIcon-view"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#fff",
                      "fontSize": 11,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "900",
                    },
                  ]
                }
                testID="Article-PlayIcon-Icon-pause"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12,
                "lineHeight": 15,
              },
              Array [
                Object {
                  "backgroundColor": "#EEEEEE",
                  "borderRadius": 10,
                  "color": "#AAAAAA",
                  "height": 21,
                  "marginTop": 10,
                  "paddingBottom": 0,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                Object {
                  "backgroundColor": "#037DE2",
                  "color": "#ffffff",
                },
              ],
            ]
          }
          testID="Article-duration"
        >
          ? min.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
